Changed the zindex for maximize pomodoro button, fixed incorrect height for buttons container when the timer is minimized, fixed some layout issues in portrait mode

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 @media (orientation: portrait) {
     .App{
-        flex-wrap: wrap;
+        flex-direction: column;
         overflow-y: auto;
         padding: 0;
     }
