--- a/src/components/MainPanel/History/History.module.css
+++ b/src/components/MainPanel/History/History.module.css
@@ -1,7 +1,6 @@
 .history{
     padding: 20px 10px;
     height: 100%;
-    max-height: calc(100vh - 50px);
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -48,7 +47,7 @@
 @media (orientation: portrait) {
     
     .history{
-        max-height: calc(50vh - 50px);
+        max-height: calc(100vh - 100vw - 60px);
         width: 100vw;
     }
 
