--- a/src/components/MainPanel/MainPanel.module.css
+++ b/src/components/MainPanel/MainPanel.module.css
@@ -71,9 +71,9 @@
 .selected{
     border-bottom: 2px solid rgba(211, 211, 211, 0.3) !important;
 }
-.mainPanel .content{
+.content{
     flex-grow: 1;
-    max-height: calc(100% - 50px);
+    overflow: hidden;
 }
 .mainPanel.hide-nav .content{
     height: 100%;
@@ -86,13 +86,13 @@
     .mainPanel{
         width: 100vw;
         max-width: 100vw;
-        flex-grow: 1;
         height: auto;
-
+        max-height: calc(100vh - 100vw - 10px);
+        flex-grow: 1;
     }
     .mainPanel .content{
         width: 100vw;
-        height: 100%;
+        height: calc(100vh - 100vw - 60px);;
         flex-grow: 1;
     }
     .mainPanel.extended{
